# debug-macros

./: .buildinfo  .gitignore  AGENTS.md  README.md  api.html  genindex.html  index.html  meson.build  objects.inv  search.html  searchindex.js  usage.html
.github/workflows/: docs.yml  test.yml
_sources/: index.rst.txt
config/: dbg_version.h.in
doc/sphinx/: Doxyfile
doc/sphinx/source/: api.rst  conf.py  index.rst  usage.rst
include/: dbg.h  debug.h
src/: dbg.c  debug.c
subprojects/: unity.wrap
test/: test_debug.c
tests/: meson.build  test_dbg.c
